<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfoActivity">

    <ImageView
        android:id="@+id/slika"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="profilna"
        android:src="@drawable/profilnarac" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputIme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/slika"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textInputPrezime"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/ime" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPrezime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/slika"
        app:layout_constraintStart_toEndOf="@+id/textInputIme"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prezime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/prezime"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/linija1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputIme"
        android:layout_height="1dp"
        android:background="#0a0a0a" />

    <TextView
        android:id="@+id/tvDatumRodenja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linija1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etUnos"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/datum_rodenja"
        style="@style/TextViewStyle"/>

    <EditText
        android:id="@+id/etUnos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linija1"
        app:layout_constraintStart_toEndOf="@+id/tvDatumRodenja"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:theme="@style/TextInputLayoutStyle"/>

    <View
        android:id="@+id/linija2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDatumRodenja"
        android:layout_marginTop="16dp"
        android:background="#0a0a0a"/>

    <Button
        android:id="@+id/buttonDalje"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dalje" />

</androidx.constraintlayout.widget.ConstraintLayout>