<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentInfoActivity">

    <ImageView
        android:id="@+id/slika"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="profilna"
        android:src="@drawable/profilnarac" />


    <Spinner
        android:id="@+id/spinnerPredmet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/slika"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:id="@+id/spinnerProfesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPredmet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"/>


    <TextView
        android:id="@+id/akGod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProfesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editAkGod"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/akademska_godina"
        style="@style/TextViewStyle"/>

    <EditText
        android:id="@+id/editAkGod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProfesor"
        app:layout_constraintStart_toEndOf="@+id/akGod"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:theme="@style/TextInputLayoutStyle"/>

    <TextView
        android:id="@+id/tvSatiPredavanja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/akGod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etSatiPredavanja"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sati_predavanja"
        style="@style/TextViewStyle"/>

    <EditText
        android:id="@+id/etSatiPredavanja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/akGod"
        app:layout_constraintStart_toEndOf="@+id/tvSatiPredavanja"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:theme="@style/TextInputLayoutStyle"/>

    <TextView
        android:id="@+id/tvSatiLv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSatiPredavanja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etSatiLv"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sati_labosa"
        style="@style/TextViewStyle"/>

    <EditText
        android:id="@+id/etSatiLv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSatiPredavanja"
        app:layout_constraintStart_toEndOf="@+id/tvSatiLv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:theme="@style/TextInputLayoutStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>